# Aeroacoustics-Monopole-Errors

./: .gitattributes  .gitignore  LICENSE  README.md  config.py  pyproject.toml
data/monopoleFlow/analytical/: monopole_100Hz.json  monopole_100Hz_M0.2.json  monopole_100Hz_alpha_001.json  monopole_100Hz_alpha_ln2.json  (+7 more)
foamCases/: readmeSchemes.md  readmeTests.md
foamCases/monopoleFlow/: Allrun.sh  configDict  postProcess  run.sh
images/: CircMesh - Spacial Schemes.html  CircMesh - Time Schemes.html  NewMesh1 16PPW.html  NewMesh1 32PPW DampingZone.html  NewMesh1 32PPW.html  NewMesh1 64PPW - Time Scheme.html  NewMesh1 64PPW.html  NewMesh1 8PPW.html  QuadMesh 16PPW.html  QuadMesh 32PPW.html  QuadMesh 64PPW.html  QuadMesh 8PPW.html
images/plotly-interactive/: CircMesh - Time Schemes.html  NewMesh1 16PPW - Spacial Schemes.html  NewMesh1 16PPW.html  NewMesh1 32PPW - Spacial Schemes.html  NewMesh1 32PPW DampingZone.html  NewMesh1 32PPW.html  NewMesh1 64PPW - Spacial Schemes.html  NewMesh1 8PPW - Spacial Schemes.html  QuadMesh 32PPW.html  QuadMesh 64PPW.html
observers/: microphonesTimeS.txt  probesSpacialDampingZone  probesTime  templateProbe.txt
observers/mach0.2/: probesRadial_R1  probesRadial_R3  probesSpacial_16PPW  probesSpacial_32PPW  probesSpacial_64PPW  probesSpacial_8PPW  probesTime
observers/mach0.5/: probesSpacial  probesSpacialDampingZone  probesTime
scripts/: SpacialResults.py  TimeResults.py  TimeResults_ZoneTests.py  analyticalSolution.py  analyticalSolutions.ipynb  autoRun.py  circMesh.ipynb  circMesh.py  convert_to_pdf.py  errors_evol.py  mach02.ipynb  monopoleFlow_cyl.m  observers.py  probes.py  probes_generation.py  radial_observers.py  ray-trace.ipynb  results.py  schemes.ipynb  temporalSchemes.ipynb  wave_lenght.py  wave_length.py  wavelength.py  windows_analysis.py
src/: builder.py  monopole.py  observers.py  path.py  postprocess.py  utils.py
test/: test.txt  test_Radial.py  test_gmsh.py  test_importData.py  test_joblib.py  test_monopoleFlow.py  test_pathlib2.py  test_plotly.py
(+149 files in other folders)
